force-app/main/default/objects/Care_Plan_Contact__c/Care_Plan_Contact__c.object-meta.xml
<CustomObject>
    <label>Care Plan Contact</label>
    <nameField>
        <displayFormat>CPN-{000}</displayFormat>
        <label>Care Plan Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Plan Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>