force-app/main/default/objects/Care_Plan_Contact__c/fields/CarePlan_Account__c.field-meta.xml
<CustomField>
    <fullName>CarePlan_Account__c</fullName>
    <formula>Case__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CarePlan Account</label>
    <type>Text</type>
</CustomField>