force-app/main/default/objects/Care_Plan_Contact__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Care Plan Contacts</relationshipLabel>
    <relationshipName>Care_Plan_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>